<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dalzai.mercedx.MainActivity"
    >

    <item
        android:id="@+id/locate_us"
        android:title="@string/find_a_dealership"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"
        android:icon="@drawable/merc_log"
        />
    <item
        android:id="@+id/call_us"
        android:title="@string/call_dealership"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_call_"
        />
    <item
        android:id="@+id/about_us"
        android:title="@string/about_mercedes"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info"
        />
</menu>
