<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/back_black">

    <ImageView
        android:id="@+id/home_image"
        android:layout_width="match_parent"
        android:layout_height="176sp"
        android:src="@drawable/home_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_mercedx"
        android:layout_marginTop="40sp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/home_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/level1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_your_personal_mercedes_help_centre"
        android:textColor="@color/text_white"
        android:textSize="14sp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/level2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_access_to_all_information_and_chat_with_mercedes_vega_ai"
        android:textColor="@color/text_white"
        android:layout_marginTop="4sp"
        app:layout_constraintTop_toBottomOf="@id/level1_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/brand_logo1"
        android:layout_width="70sp"
        android:layout_height="56sp"
        android:layout_marginTop="36sp"
        android:layout_marginStart="10sp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/merc_log"
        app:layout_constraintTop_toBottomOf="@id/level2_text"
        tools:layout_editor_absoluteX="30sp"
        android:onClick="merc"/>

    <ImageView
        android:id="@+id/brand_logo2"
        android:layout_width="75sp"
        android:layout_height="74sp"
        android:layout_marginTop="30sp"
        app:layout_constraintStart_toEndOf="@id/brand_logo1"
        app:layout_constraintEnd_toStartOf="@id/brand_logo3"
        android:background="@color/text_white"
        android:src="@drawable/amg_logo"
        app:layout_constraintLeft_toRightOf="@id/brand_logo1"
        app:layout_constraintTop_toBottomOf="@id/level2_text"
        android:onClick="amg"/>

    <ImageView
        android:id="@+id/brand_logo3"
        android:layout_width="53sp"
        android:layout_height="53sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="10sp"
        android:src="@drawable/smart_logo"
        app:layout_constraintLeft_toRightOf="@id/brand_logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level2_text"
        android:onClick="smart"/>

    <TextView
        android:id="@+id/learn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_the_brands_above_to_learn_more"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brand_logo1"
        android:layout_marginTop="40sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
